a11y: #4226 material prevent focus layout shifts for article links

--- a/src/themes/material/assets/mat.css
+++ b/src/themes/material/assets/mat.css
@@ -1083,9 +1083,14 @@ p + .btn-background {
 
   /* Prevent layout shifts */
   .card-panel a,
+  p a,
+  span a, 
+  li a,
   .dropdown-item {
       display: inline-block;
-      margin: var(--focus-ring-size);
+      margin: calc(-1 * var(--focus-ring-size));
+      padding: var(--focus-ring-size);
+      box-sizing: border-box;
   }
 
   /* individual overrides */
